Fix: alert box overlap Fix: View events type

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -618,17 +618,17 @@ input:invalid {
 
 /* || Alerts */
 #alertbox {
-	position: fixed;
+	position: absolute;
 	bottom: 30px;
-	left: 0px;
-	width: 100%;
 	z-index: 999;
+	left: 20%;
+	right: 20%
 }
 
-.alerts {
+/* .alerts {
 	width: 60%;
 	margin: auto;
-}
+} */
 
 .alert {
 	margin: 0px;
